Added interactive UI

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<div>
+  <button id="button-0">Rock</button>
+  <button id="button-1">Paper</button>  
+  <button id="button-2">Scissors</button>
+  <br><br>
+  <button id="button-new">Start Over</button>
+  <br><br>
+  <div id="result"></div>
+    <p id="scoreBoard"></p>
+    <p id="result"></p>
+  </div>
   <script src="script.js"></script>
 </body>
